--- a/ios/Podfile
+++ b/ios/Podfile
@@ -54,6 +54,8 @@ target 'modulo06' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
   target 'modulo06Tests' do
     inherit! :complete
     # Pods for testing
